# tkutils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  publish.sh  tkutils.vplspec
demo/: CMakeLists.txt  demo.cpp
lib/: CMakeLists.txt
lib/include/tkutils/: tkarray.hpp  tklist.hpp  tkutils.hpp
lib/src/tkutils/: CMakeLists.txt  tkarray.cpp  tklist.cpp  tkutils.cpp
vcport/: portfile.cmake  vcpkg.json
