# 本项目构件所须的CMake最低版本号
cmake_minimum_required (VERSION 3.5)

# 配置项目信息
project(
  tkutils # 项目名，会被保存到 PROJECT_NAME 变量
  VERSION 0.1.0 # 项目版本号（库版本）
  LANGUAGES CXX # 项目开发语言
)

# configs
include(CMakePackageConfigHelpers)
write_basic_package_version_file(
  "${PROJECT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
  VERSION ${PROJECT_VERSION}
  COMPATIBILITY SameMajorVersion
)
include(CMakePackageConfigHelpers)
configure_package_config_file(
  "${PROJECT_SOURCE_DIR}/cmake/${PROJECT_NAME}Config.cmake.in"
  "${PROJECT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
  INSTALL_DESTINATION lib/cmake/${PROJECT_NAME}
)
install(
  FILES
  "${PROJECT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
  "${PROJECT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
  DESTINATION lib/cmake/${PROJECT_NAME}
)

add_subdirectory(lib)

if(BUILD_DEMO)
  add_subdirectory(demo)
endif()